# SiftStack

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_tracerfy_upload.py
.actor/: actor.json  input_schema.json
docs/: AARON-PATH-OFF-W2.md  DATA-FLOW-GROUND-TRUTH.md  DATASIFT-AUDIT-20260504_084244.md  MASTER-PLAN.md  MIKE-MAIL-ENTRY-SETUP.md  MIKE-MASTER-GUIDE.md  MIKE-PRESET-BUILD.md  SIFTSTACK-WALKTHROUGH.md  SOP-CADENCES.md  SOP-CALL-SCRIPTS.md  SOP-DAILY-OPERATIONS-V2.md  SOP-DAILY-OPERATIONS.md  SOP-DATASIFT-NAVIGATION.md  SOP-DIRECT-MAIL-PLAN.md  SOP-LEAD-QUALIFICATION.md  SOP-MAIL-TEMPLATES.md  SOP-MIKE-KPI-TRACKER.md  SOP-OUTREACH-CADENCE.md  SOP-RED-FLAGS.md  SOP-REDEMPTION-WINDOW.md  SOP-SMS-TEMPLATES-BY-PRESET.md  SOP-SMS-TEMPLATES-V2.md  SOP-TAG-FLOW.md  SOP-WEEKLY-REVIEW.md  phase_2_ky_probate_enrichment.md
scripts/: backfill_master_ledger.py  datasift_audit.py  env_to_apify_input.py  generate_sop_pdfs.py  generate_strategic_pdfs.py  gsheet_apps_script.js  mike_kpi_tracker_template.csv  push_csvs_to_datasift.py  retag_buckets_v4.py  retag_existing_list.py  seed_dedup_set.py  single_address_lookup.py  upload_buckets_from_csv.py
src/: accela_scraper.py  address_standardizer.py  ancestry_enricher.py  case_summary.py  comp_analyzer.py  config.py  daily_report_email.py  daily_summary.py  data_formatter.py  datasift_api.py  datasift_api_upload.py  datasift_dedup.py  datasift_formatter.py  datasift_post_upload_tagger.py  datasift_uploader.py  deal_analyzer.py  deep_prospector.py  disposition_flyer.py  drive_uploader.py  dropbox_watcher.py  (+33 more)
(+37 files in other folders)
